<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#efefef"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        tools:ignore="NestedWeights">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonLeftBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:onClick="addOperand"
                android:text="@string/left_bracket"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonRightBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:onClick="addOperand"
                android:text="@string/right_bracket"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="clear"
                android:text="@string/c"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPower"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="addOperand"
                android:text="@string/power"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonRemainder"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="addOperand"
                android:text="@string/remainder"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="addOperand"
                android:text="@string/divide"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_7"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_8"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_9"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="addOperand"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_4"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_5"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_6"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="addOperand"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_1"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_2"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickDigit"
                android:text="@string/_3"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="addOperand"/>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="clickDigit"
                android:text="@string/_0"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPoint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                android:textColor="@color/colorButton"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="calculate"
                android:text="@string/compute"
                android:textColor="@color/colorButton"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>